# AudioConverter

./: .gitignore  CMakeLists.txt  main.cpp
CLI/: CMakeLists.txt  converter.h  main.cpp
Qt/: CMakeLists.txt  converter.cpp  converter.h  fileitemwidget.cpp  fileitemwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
